# downtimed

./: .bzrignore  .gitattributes  .gitignore  LICENSE  Makefile.am  NEWS  README  README.md  TODO  com.epipe.downtimed.plist  configure.ac  downtimed.8  downtimed.c  downtimed.spec  downtimedb.c  downtimedb.h  downtimes.1  downtimes.c  freebsd-startup.sh
startup-scripts/: archlinux-startup.sh  com.epipe.downtimed.plist  debian-startup.sh  downtimed.service  downtimed.smf.xml  freebsd-startup.sh  opensuse-startup.sh  redhat-startup.sh  sysconfig-downtimed
