#
# Makefile.am
#
# Copyright (c) 2009-2010 EPIPE Communications. All rights reserved.
#
# This software is licensed under the terms and conditions of the FreeBSD
# License which is also known as the Simplified BSD License. You should have 
# received a copy of that license along with this software.
# 

sbin_PROGRAMS = downtimed
downtimed_SOURCES = downtimed.c
dist_man_MANS = downtimed.8

EXTRA_DIST = README LICENSE INSTALL NEWS freebsd-startup.sh

# eof
